# haozhang04.github.io

./: README.md  _config.yml  deploy.bat  index.html  package.json
.github/workflows/: commitlint.yml  pages-deploy.yml
_includes/: favicons.html
_layouts/: default.html  fullscreen.html
_posts/: 2023-07-15-robocon2023-captain.md  2024-05-20-robotics-demo.md  2024-07-15-robocon2024-captain.md  2025-12-10-robocon2025-captain.md  2025-12-11-graduation-thesis.md
_posts/formulation/: 2025-12-12-underwater-robot-configuration-analysis.md
_sass/base/: _base.scss
_sass/layout/: _footer.scss
_sass/pages/: _home.scss  _post.scss
_tabs/: robot.md
assets/doc/formulation/: 水下机器人涵推构型分析.docx
assets/robot_model/uwrobot/: CMakeLists.txt  package.xml
assets/robot_model/uwrobot/config/: controllers.yaml
assets/robot_model/uwrobot/launch/: gazebo_launch.py  rviz2_launch.py
assets/robot_model/uwrobot/meshes/: LF1.STL  LH2.STL  RF0.STL  RH3.STL
assets/robot_model/uwrobot/resource/: resource.rviz
assets/robot_model/uwrobot/urdf/: uwrobot.urdf
assets/robot_model/uwrobot/urdf/cache/: uwrobot.urdf  uwrobot_rviz2.urdf  uwrobot_win.urdf
assets/robot_model/uwrobot/world/: empty.world
robot_viewer/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
robot_viewer/public/: usd-iframe.html
robot_viewer/public/usd-viewer/: main.js  usd.html
robot_viewer/src/: main.js
robot_viewer/src/controllers/: FileHandler.js
robot_viewer/src/loaders/: ModelLoaderFactory.js
robot_viewer/src/renderer/: HighlightManager.js  InertialVisualization.js  SceneManager.js  VisualizationManager.js
robot_viewer/src/ui/: JointControlsUI.js  PanelManager.js  (+1 more)
(+33 files in other folders)
